--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/elearn"
+DATABASE_URL="postgresql://yourusername:yourpassword@localhost:5432/elearn"
 
 # Example:
 # SERVERVAR="foo"
