--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@node-rs/argon2": "^1.8.3",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "latest",
     "lucia": "^3.2.0",
     "next": "^14.1.3",
+    "next-safe-action": "^6.2.0",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.22.4"
+    "react-hook-form": "^7.51.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
@@ -28,7 +33,7 @@
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "latest",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
